; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-source.c_obs_source_hotkey_mute.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-source.c_obs_source_hotkey_mute.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.obs_source = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32*, i32*, i32)* @obs_source_hotkey_mute to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @obs_source_hotkey_mute(i8* %0, i32* %1, i32* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca %struct.obs_source*, align 8
  store i8* %0, i8** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32 %3, i32* %9, align 4
  %11 = load i32*, i32** %7, align 8
  %12 = call i32 @UNUSED_PARAMETER(i32* %11)
  %13 = load i32*, i32** %8, align 8
  %14 = call i32 @UNUSED_PARAMETER(i32* %13)
  %15 = load i8*, i8** %6, align 8
  %16 = bitcast i8* %15 to %struct.obs_source*
  store %struct.obs_source* %16, %struct.obs_source** %10, align 8
  %17 = load i32, i32* %9, align 4
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %23

19:                                               ; preds = %4
  %20 = load %struct.obs_source*, %struct.obs_source** %10, align 8
  %21 = call i64 @obs_source_muted(%struct.obs_source* %20)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %24

23:                                               ; preds = %19, %4
  store i32 0, i32* %5, align 4
  br label %27

24:                                               ; preds = %19
  %25 = load %struct.obs_source*, %struct.obs_source** %10, align 8
  %26 = call i32 @obs_source_set_muted(%struct.obs_source* %25, i32 1)
  store i32 1, i32* %5, align 4
  br label %27

27:                                               ; preds = %24, %23
  %28 = load i32, i32* %5, align 4
  ret i32 %28
}

declare dso_local i32 @UNUSED_PARAMETER(i32*) #1

declare dso_local i64 @obs_source_muted(%struct.obs_source*) #1

declare dso_local i32 @obs_source_set_muted(%struct.obs_source*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
